# shenas

./: .dockerignore  .gitignore  .mcp.json  .prettierignore  .prototools  CLAUDE.md  DISCOURSE.md  Makefile  Makefile-oss  README-oss.md  README.md  eslint.config.js  main.py  moon.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: analytics_catalog.py  catalog.py  categories.py  cli.py  config.py  data_catalog.py  database.py  databases.py  db.py  dev_credentials.py  entities.py  entity.py  finding.py  geofences.py  hotkeys.py  hypotheses.py  jobs.py  literature.py  literature_fetch.py  local_sessions.py  local_users.py  main.py  moon.yml  plugin.py  promotion.py  pubsub.py  pyproject.toml  recipe_cache.py  relation.py  scheduler_cli.py  schema.py  server.py  server_cli.py  static_plugin.py  sync_scheduler.py  system_settings.py  table.py  transforms.py  user_context.py  user_keys.py  (+2 more)
app/api/: __init__.py  auth.py  config.py  db.py  models.py  packages.py  pipes.py  plugins.py  query.py  sources.py  sync.py  transforms.py  users.py
app/cli/: client.py  main.py
app/cli/commands/: component.py  config_cmd.py  db_cmd.py  pipe.py  pkg.py  plugin_cmd.py  schema_cmd.py  service.py  theme_cmd.py  transform_cmd.py  ui_cmd.py
app/cli/tests/: test_cli.py  test_client.py  test_client_schedule.py  test_service.py
app/components/: data-table.ts  package-lock.json  package.json  shenas-frontends.d.ts
app/desktop/: PKGBUILD  moon.yml  package-lock.json  package.json  shenas-desktop-0.1.0-1-x86_64.pkg.tar.zst  shenas-desktop-debug-0.1.0-1-x86_64.pkg.tar.zst
app/desktop/src/: index.html
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/entities/: __init__.py  places.py  properties.py  statements.py
app/fl/: api.py  client.py  data.py  inference.py  model_registry.py  trainer.py
app/fl/tests/: conftest.py  test_client.py  test_data.py  test_inference.py  test_trainer.py
app/graphql/: __init__.py  derive.py  extensions.py  llm_provider.py  loaders.py  mutations.py  queries.py  subscriptions.py  types.py
app/llm/: __init__.py  backends.py  cache.py  cli.py  models.py  provider.py
app/mesh/: daemon.py  identity.py  relay_sync.py  sync_log.py  transport.py
app/mobile/: build-frontend.sh  build-ui.sh  moon.yml  package-lock.json  package.json
app/mobile/src/: index.html
app/mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/models/: __init__.py
app/static/: manifest.json  sw.js
app/telemetry/: dispatcher.py  exporters.py  processors.py  schema.py  setup.py
app/telemetry/tests/: conftest.py  test_telemetry.py
app/tests/: conftest.py  test_api_config.py  test_api_db.py  test_api_packages.py  test_api_plugins.py  test_api_sync.py  test_app.py  test_categories.py  test_cli.py  test_client.py  test_db.py  test_derive.py  test_endpoints.py  test_entities.py  test_entity_table.py  test_frontend_integration.py  test_graphql.py  test_graphql_derive.py  test_hypotheses.py  test_import_smoke.py  test_inference_api.py  test_jobs.py  test_literature.py  test_literature_fetch.py  test_llm.py  test_loaders.py  test_mesh_daemon.py  test_mesh_identity.py  test_mesh_libp2p_host.py  test_mesh_relay_sync.py  test_mesh_sync_log.py  test_mesh_sync_protocol.py  test_mesh_transport.py  test_plugins.py  test_promotion.py  test_pubsub.py  test_recipe_cache.py  test_relation.py  test_scd2_default_current.py  test_server_cli.py  (+5 more)
cli/: client.py  db.py  main.py  moon.yml  pyproject.toml
cli/commands/: component.py  config_cmd.py  data.py  db_cmd.py  install.py  pipe.py  pkg.py  plugin_cmd.py  registry_cmd.py  schema_cmd.py  sync.py  theme_cmd.py  transform_cmd.py  ui.py  ui_cmd.py  uninstall.py
cli/tests/: test_cli.py  test_client.py  test_client_schedule.py  test_service.py
fl-client/: pyproject.toml
fl-client/fl_client/: api.py  cli.py  client.py  data.py  inference.py  model_registry.py  trainer.py
fl-client/tests/: test_client.py  test_data.py  test_inference_api.py  test_trainer.py
pipes/core/: moon.yml  pyproject.toml
pipes/core/tests/: test_core.py
pipes/duolingo/: moon.yml  pyproject.toml
pipes/duolingo/tests/: test_auth.py  test_client.py  test_source.py  test_transform.py
pipes/garmin/: moon.yml  pyproject.toml
pipes/garmin/tests/: test_auth.py  test_transform.py  test_utils.py
pipes/gmail/: moon.yml  pyproject.toml
pipes/gmail/tests/: test_auth.py  test_source.py
pipes/gphotos/: pyproject.toml
pipes/gphotos/tests/: test_source.py
pipes/lunchmoney/: moon.yml  pyproject.toml
pipes/lunchmoney/tests/: test_auth.py  test_transform.py
pipes/obsidian/: moon.yml  pyproject.toml
pipes/spotify/: pyproject.toml
pipes/spotify/tests/: test_auth.py
pipes/strava/: moon.yml  pyproject.toml
pipes/strava/tests/: test_auth.py  test_source.py  test_transform.py
plugins/analyses/core/: moon.yml  pyproject.toml
plugins/analyses/hypothesis/: moon.yml  pyproject.toml
plugins/analyses/suggestion/: moon.yml  pyproject.toml
plugins/core/: moon.yml  pyproject.toml
plugins/core/tests/: test_analytics_llm.py  test_analytics_mode.py  (+4 more)
repository/: cli.py  main.py  moon.yml  pyproject.toml  repository.py
repository/tests/: test_repository_server.py
scheduler/: cli.py  client.py  daemon.py  pyproject.toml
scheduler/tests/: test_daemon.py  test_integration.py
schemas/core/: moon.yml  pyproject.toml
schemas/finance/: pyproject.build.toml  pyproject.toml
schemas/fitness/: pyproject.build.toml  pyproject.toml
schemas/habits/: pyproject.toml
server/api/: .env.example  pyproject.toml
server/fl/: pyproject.toml
server/repository/: pyproject.toml
shenasctl/: client.py  main.py  pyproject.toml
shenasctl/commands/: component.py  config_cmd.py  dashboard.py  dataset_cmd.py  db_cmd.py  frontend_cmd.py  pipe.py  plugin_cmd.py  schema_cmd.py  source.py  suggest_cmd.py  theme_cmd.py  transform_cmd.py  ui_cmd.py
shenasctl/tests/: test_cli.py  test_client.py  test_client_schedule.py  test_service.py
ui/default/: default.html  index.html  moon.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
(+1130 files in other folders)
