[project]
name = "shenas-workspace"
version = "0.0.0"
description = "Shenas metrics platform workspace"
requires-python = ">=3.11"

[tool.uv]
package = false
# Flower pins typer<0.21 and rich<14 for its CLI. We only use
# flwr.client and flwr.common at runtime, which work with newer versions.
override-dependencies = ["typer>=0.24.1", "rich>=14.3.3"]

[tool.uv.workspace]
members = [
    "app",
    "shenasctl",
    "scheduler",
    "server/repository",
    "plugins/core",
    "plugins/pipes/*",
    "plugins/schemas/*",
    "plugins/components/*",
    "plugins/uis/*",
    "plugins/themes/*",
]

[tool.uv.sources]
shenas-app = { workspace = true }
shenas-cli = { workspace = true }
shenas-scheduler = { workspace = true }
shenas-repository = { workspace = true }
shenas-plugin-core = { workspace = true }
shenas-pipe-core = { workspace = true }
shenas-pipe-garmin = { workspace = true }
shenas-pipe-lunchmoney = { workspace = true }
shenas-pipe-obsidian = { workspace = true }
shenas-pipe-gmail = { workspace = true }
shenas-pipe-gcalendar = { workspace = true }
shenas-pipe-gtakeout = { workspace = true }
shenas-pipe-duolingo = { workspace = true }
shenas-pipe-spotify = { workspace = true }
shenas-schema-core = { workspace = true }
shenas-schema-fitness = { workspace = true }
shenas-schema-events = { workspace = true }
shenas-schema-finance = { workspace = true }
shenas-schema-outcomes = { workspace = true }
shenas-schema-habits = { workspace = true }
shenas-component-core = { workspace = true }
shenas-component-fitness-dashboard = { workspace = true }
shenas-component-data-table = { workspace = true }
shenas-ui-core = { workspace = true }
shenas-ui-default = { workspace = true }
shenas-theme-core = { workspace = true }
shenas-theme-default = { workspace = true }
shenas-theme-dark = { workspace = true }

[dependency-groups]
dev = [
    "shenas-app",
    "shenas-cli",
    "shenas-scheduler",
    "shenas-pipe-garmin",
    "shenas-pipe-lunchmoney",
    "shenas-pipe-obsidian",
    "shenas-pipe-gmail",
    "shenas-pipe-gcalendar",
    "shenas-pipe-gtakeout",
    "shenas-pipe-duolingo",
    "shenas-pipe-spotify",
    "shenas-schema-fitness",
    "shenas-schema-finance",
    "shenas-schema-outcomes",
    "shenas-schema-habits",
    "shenas-component-fitness-dashboard",
    "shenas-component-data-table",
    "shenas-ui-default",
    "shenas-theme-default",
    "shenas-theme-dark",
    "commitizen>=4.13.9",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "pyinstaller>=6.19.0",
]
fl = [
    "flwr>=1.15",
    "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["shenasctl/tests", "app/tests", "app/fl/tests", "scheduler/tests", "server/repository/repository/tests", "app/telemetry/tests", "plugins/pipes/core/tests", "plugins/pipes/garmin/tests", "plugins/pipes/gmail/tests", "plugins/pipes/gcalendar/tests", "plugins/pipes/gtakeout/tests", "plugins/pipes/lunchmoney/tests", "plugins/pipes/obsidian/tests", "plugins/pipes/duolingo/tests", "plugins/pipes/spotify/tests", "plugins/schemas/fitness/tests", "plugins/schemas/finance/tests", "plugins/schemas/outcomes/tests", "plugins/schemas/habits/tests", "plugins/schemas/events/tests"]
addopts = "--import-mode=importlib"
pythonpath = [".", "server/repository"]

[tool.ruff]
line-length = 127
extend-exclude = ["app/desktop/src-tauri/target"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstring enforcement
    "ANN",     # flake8-annotations -- uses ty for type checking
    "ERA",     # eradicate -- commented-out code detection (too noisy)
    "FIX",     # fixme comments
    "TD",      # todo comments
    "S",       # bandit security -- too opinionated for a local-first app
    "INP001",  # implicit namespace package (workspace members)
    "COM812",  # missing trailing comma (conflicts with ruff formatter)
    "ISC001",  # implicit string concat (conflicts with ruff formatter)
    "T20",     # flake8-print -- print() used intentionally (CLI app)
    "PLC0415", # import not at top level -- lazy imports used intentionally
    "BLE001",  # blind exception -- broad except used in plugin discovery
    "FBT",     # boolean trap -- too strict for CLI/API params
    "EM",      # exception message style -- too verbose for small project
    "TRY003",  # long exception messages -- same as EM
    "B008",    # function call in default arg -- typer.Option() pattern
    "PLW0603", # global statement -- used for singleton DB connection
    "SLF001",  # private member access -- needed for plugin introspection
    "N806",    # variable in function should be lowercase -- dataclass ClassVar pattern
    "PLR2004", # magic value in comparison -- acceptable in small project
    "TRY300",  # try-except-return -- acceptable pattern
    "PTH123",  # open() vs Path.open() -- not worth changing
    "NPY002",  # numpy random -- legacy pattern in FL code
    "C901",    # too complex -- refactor later
    "PLR0913", # too many arguments -- CLI/API functions
    "PLW1510", # subprocess.run without check -- intentional
    "B904",    # raise without from -- fix incrementally
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"**/tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"build/**/*.py" = ["SLF001"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shenas_plugins", "shenas_pipes", "shenas_schemas", "shenas_components", "shenas_themes", "shenas_ui", "repository", "scheduler"]

[tool.commitizen]
version_provider = "uv"
