[project]
name = "shenas-workspace"
version = "0.0.0"
description = "Shenas metrics platform workspace"
requires-python = ">=3.11"
dependencies = [
    "strawberry-graphql[fastapi]>=0.312.3",
]

[tool.uv]
package = false
# Flower pins typer<0.21 and rich<14 for its CLI. We only use
# flwr.client and flwr.common at runtime, which work with newer versions.
override-dependencies = ["typer>=0.24.1", "rich>=14.3.3"]

[tool.uv.workspace]
members = [
    "app",
    "shenasctl",
    "scheduler",
    "server/repository",
    "plugins/core",
    "plugins/sources/*",
    "plugins/datasets/*",
    "plugins/dashboards/*",
    "plugins/models/*",
    "plugins/frontends/*",
    "plugins/themes/*",
]

[tool.uv.sources]
shenas-app = { workspace = true }
shenas-cli = { workspace = true }
shenas-scheduler = { workspace = true }
shenas-repository = { workspace = true }
shenas-plugin-core = { workspace = true }
shenas-source-core = { workspace = true }
shenas-source-garmin = { workspace = true }
shenas-source-lunchmoney = { workspace = true }
shenas-source-obsidian = { workspace = true }
shenas-source-gmail = { workspace = true }
shenas-source-gcalendar = { workspace = true }
shenas-source-gtakeout = { workspace = true }
shenas-source-duolingo = { workspace = true }
shenas-source-spotify = { workspace = true }
shenas-source-strava = { workspace = true }
shenas-source-tile = { workspace = true }
shenas-source-withings = { workspace = true }
shenas-source-goodreads = { workspace = true }
shenas-source-chrome = { workspace = true }
shenas-source-shell-history = { workspace = true }
shenas-source-firefox = { workspace = true }
shenas-source-cronometer = { workspace = true }
shenas-source-github = { workspace = true }
shenas-source-rescuetime = { workspace = true }
shenas-dataset-core = { workspace = true }
shenas-dataset-fitness = { workspace = true }
shenas-dataset-events = { workspace = true }
shenas-dataset-finance = { workspace = true }
shenas-dataset-outcomes = { workspace = true }
shenas-dataset-habits = { workspace = true }
shenas-dataset-promoted = { workspace = true }
shenas-dataset-location = { workspace = true }
shenas-dashboard-core = { workspace = true }
shenas-dashboard-fitness-dashboard = { workspace = true }
shenas-dashboard-data-table = { workspace = true }
shenas-dashboard-event-gantt = { workspace = true }
shenas-model-core = { workspace = true }
shenas-model-sleep-forecast = { workspace = true }
shenas-frontend-core = { workspace = true }
shenas-frontend-default = { workspace = true }
shenas-frontend-focus = { workspace = true }
shenas-theme-core = { workspace = true }
shenas-theme-default = { workspace = true }
shenas-theme-dark = { workspace = true }

[dependency-groups]
dev = [
    "shenas-app",
    "shenas-cli",
    "shenas-scheduler",
    "shenas-source-garmin",
    "shenas-source-lunchmoney",
    "shenas-source-obsidian",
    "shenas-source-gmail",
    "shenas-source-gcalendar",
    "shenas-source-gtakeout",
    "shenas-source-duolingo",
    "shenas-source-spotify",
    "shenas-source-strava",
    "shenas-source-tile",
    "shenas-source-withings",
    "shenas-source-goodreads",
    "shenas-source-chrome",
    "shenas-source-shell-history",
    "shenas-source-firefox",
    "shenas-source-cronometer",
    "shenas-source-github",
    "shenas-source-rescuetime",
    "shenas-dataset-fitness",
    "shenas-dataset-finance",
    "shenas-dataset-outcomes",
    "shenas-dataset-habits",
    "shenas-dataset-promoted",
    "shenas-dataset-location",
    "shenas-dashboard-fitness-dashboard",
    "shenas-dashboard-data-table",
    "shenas-frontend-default",
    "shenas-frontend-focus",
    "shenas-theme-default",
    "shenas-theme-dark",
    "shenas-model-core",
    "commitizen>=4.13.9",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty==0.0.27",
    "pyinstaller>=6.19.0",
]
fl = [
    "flwr>=1.15",
    "torch>=2.0",
    "shenas-model-sleep-forecast",
]

[tool.pytest.ini_options]
testpaths = ["shenasctl/tests", "app/tests", "app/fl/tests", "scheduler/tests", "server/repository/repository/tests", "app/telemetry/tests", "plugins/core/tests", "plugins/sources/core/tests", "plugins/sources/garmin/tests", "plugins/sources/gmail/tests", "plugins/sources/gcalendar/tests", "plugins/sources/gtakeout/tests", "plugins/sources/lunchmoney/tests", "plugins/sources/obsidian/tests", "plugins/sources/duolingo/tests", "plugins/sources/spotify/tests", "plugins/sources/tile/tests", "plugins/sources/withings/tests", "plugins/sources/goodreads/tests", "plugins/sources/chrome/tests", "plugins/sources/shell_history/tests", "plugins/sources/firefox/tests", "plugins/sources/cronometer/tests", "plugins/sources/github/tests", "plugins/sources/rescuetime/tests", "plugins/datasets/fitness/tests", "plugins/datasets/finance/tests", "plugins/datasets/outcomes/tests", "plugins/datasets/habits/tests", "plugins/datasets/events/tests"]
addopts = "--import-mode=importlib"
pythonpath = [".", "server/repository"]

[tool.ruff]
line-length = 127
extend-exclude = ["app/desktop/src-tauri/target"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstring enforcement
    "ANN",     # flake8-annotations -- uses ty for type checking
    "ERA",     # eradicate -- commented-out code detection (too noisy)
    "FIX",     # fixme comments
    "TD",      # todo comments
    "S",       # bandit security -- too opinionated for a local-first app
    "INP001",  # implicit namespace package (workspace members)
    "COM812",  # missing trailing comma (conflicts with ruff formatter)
    "ISC001",  # implicit string concat (conflicts with ruff formatter)
    "T20",     # flake8-print -- print() used intentionally (CLI app)
    "PLC0415", # import not at top level -- lazy imports used intentionally
    "BLE001",  # blind exception -- broad except used in plugin discovery
    "FBT",     # boolean trap -- too strict for CLI/API params
    "EM",      # exception message style -- too verbose for small project
    "TRY003",  # long exception messages -- same as EM
    "B008",    # function call in default arg -- typer.Option() pattern
    "PLW0603", # global statement -- used for singleton DB connection
    "SLF001",  # private member access -- needed for plugin introspection
    "N806",    # variable in function should be lowercase -- dataclass ClassVar pattern
    "PLR2004", # magic value in comparison -- acceptable in small project
    "TRY300",  # try-except-return -- acceptable pattern
    "PTH123",  # open() vs Path.open() -- not worth changing
    "NPY002",  # numpy random -- legacy pattern in FL code
    "C901",    # too complex -- refactor later
    "PLR0913", # too many arguments -- CLI/API functions
    "PLW1510", # subprocess.run without check -- intentional
    "B904",    # raise without from -- fix incrementally
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"**/tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"build/**/*.py" = ["SLF001"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shenas_plugins", "shenas_sources", "shenas_datasets", "shenas_dashboards", "shenas_themes", "shenas_frontends", "repository", "scheduler"]

[tool.commitizen]
version_provider = "uv"
