[project]
name = "shenas-workspace"
version = "0.0.0"
description = "Local-first quantified-self platform"
requires-python = ">=3.11"
dependencies = [
    "strawberry-graphql[fastapi]>=0.312.3",
]

[tool.uv]
package = false
# Flower pins typer<0.21 and rich<14 for its CLI. We only use
# flwr.client and flwr.common at runtime, which work with newer versions.
override-dependencies = ["typer>=0.24.1", "rich>=14.3.3"]

[tool.uv.workspace]
members = [
    "app",
    "shenasctl",
    "server/repository",
    "plugins/sources/*",
    "plugins/datasets/*",
    "plugins/dashboards/*",
    "plugins/models/*",
    "plugins/transformers/*",
    "plugins/analyses/*",
    "plugins/frontends/*",
    "plugins/themes/*",
]

[tool.uv.sources]
shenas-app = { workspace = true }
shenas-cli = { workspace = true }
shenas-repository = { workspace = true }
shenas-plugin-core = { workspace = true }
shenas-source-core = { workspace = true }
shenas-source-garmin = { workspace = true }
shenas-source-lunchmoney = { workspace = true }
shenas-source-obsidian = { workspace = true }
shenas-source-gmail = { workspace = true }
shenas-source-gcalendar = { workspace = true }
shenas-source-gtakeout = { workspace = true }
shenas-source-duolingo = { workspace = true }
shenas-source-spotify = { workspace = true }
shenas-source-strava = { workspace = true }
shenas-source-tile = { workspace = true }
shenas-source-withings = { workspace = true }
shenas-source-goodreads = { workspace = true }
shenas-source-chrome = { workspace = true }
shenas-source-shell-history = { workspace = true }
shenas-source-firefox = { workspace = true }
shenas-source-cronometer = { workspace = true }
shenas-source-github = { workspace = true }
shenas-source-rescuetime = { workspace = true }
shenas-source-openmeteo = { workspace = true }
shenas-dataset-core = { workspace = true }
shenas-dataset-fitness = { workspace = true }
shenas-dataset-events = { workspace = true }
shenas-dataset-finance = { workspace = true }
shenas-dataset-outcomes = { workspace = true }
shenas-dataset-habits = { workspace = true }
shenas-dataset-promoted = { workspace = true }
shenas-dataset-location = { workspace = true }
shenas-dashboard-core = { workspace = true }
shenas-dashboard-fitness = { workspace = true }
shenas-dashboard-data-table = { workspace = true }
shenas-dashboard-event-gantt = { workspace = true }
shenas-dashboard-timeline = { workspace = true }
shenas-model-core = { workspace = true }
shenas-model-sleep-forecast = { workspace = true }
shenas-transformer-core = { workspace = true }
shenas-transformer-sql = { workspace = true }
shenas-transformer-geofence = { workspace = true }
shenas-transformer-geocode = { workspace = true }
shenas-transformer-llm-categorize = { workspace = true }
shenas-transformer-reverse-geocode = { workspace = true }
shenas-transformer-regex-extract = { workspace = true }
shenas-transformer-dedup-merge = { workspace = true }
shenas-analysis-core = { workspace = true }
shenas-analysis-hypothesis = { workspace = true }
shenas-analysis-suggestion = { workspace = true }
shenas-frontend-core = { workspace = true }
shenas-frontend-default = { workspace = true }
shenas-frontend-focus = { workspace = true }
shenas-theme-core = { workspace = true }
shenas-theme-default = { workspace = true }
shenas-theme-dark = { workspace = true }

[dependency-groups]
dev = [
    "shenas-app",
    "shenas-cli",
    "shenas-source-garmin",
    "shenas-source-lunchmoney",
    "shenas-source-obsidian",
    "shenas-source-gmail",
    "shenas-source-gcalendar",
    "shenas-source-gtakeout",
    "shenas-source-duolingo",
    "shenas-source-spotify",
    "shenas-source-strava",
    "shenas-source-tile",
    "shenas-source-withings",
    "shenas-source-goodreads",
    "shenas-source-chrome",
    "shenas-source-shell-history",
    "shenas-source-firefox",
    "shenas-source-cronometer",
    "shenas-source-github",
    "shenas-source-rescuetime",
    "shenas-source-openmeteo",
    "shenas-dataset-fitness",
    "shenas-dataset-finance",
    "shenas-dataset-outcomes",
    "shenas-dataset-habits",
    "shenas-dataset-promoted",
    "shenas-dataset-location",
    "shenas-dashboard-fitness",
    "shenas-dashboard-data-table",
    "shenas-dashboard-timeline",
    "shenas-frontend-default",
    "shenas-frontend-focus",
    "shenas-theme-default",
    "shenas-theme-dark",
    "shenas-model-core",
    "shenas-transformer-sql",
    "shenas-transformer-geofence",
    "shenas-transformer-geocode",
    "shenas-transformer-llm-categorize",
    "shenas-transformer-reverse-geocode",
    "shenas-transformer-regex-extract",
    "shenas-transformer-dedup-merge",
    "shenas-analysis-hypothesis",
    "shenas-analysis-suggestion",
    "commitizen>=4.13.9",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty==0.0.27",
    "pyinstaller>=6.19.0",
]
fl = [
    "flwr>=1.15",
    "torch>=2.0",
    "shenas-model-sleep-forecast",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [".", "server/repository"]
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*",
    "ignore::DeprecationWarning:ibis.*",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.ruff]
line-length = 127
extend-exclude = ["app/desktop/src-tauri/target"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstring enforcement
    "ANN",     # flake8-annotations -- uses ty for type checking
    "ERA",     # eradicate -- commented-out code detection (too noisy)
    "FIX",     # fixme comments
    "TD",      # todo comments
    "S",       # bandit security -- too opinionated for a local-first app
    "INP001",  # implicit namespace package (workspace members)
    "COM812",  # missing trailing comma (conflicts with ruff formatter)
    "ISC001",  # implicit string concat (conflicts with ruff formatter)
    "T20",     # flake8-print -- print() used intentionally (CLI app)
    "PLC0415", # import not at top level -- lazy imports used intentionally
    "BLE001",  # blind exception -- broad except used in plugin discovery
    "FBT",     # boolean trap -- too strict for CLI/API params
    "EM",      # exception message style -- too verbose for small project
    "TRY003",  # long exception messages -- same as EM
    "B008",    # function call in default arg -- typer.Option() pattern
    "PLW0603", # global statement -- used for singleton DB connection
    "SLF001",  # private member access -- needed for plugin introspection
    "N806",    # variable in function should be lowercase -- dataclass ClassVar pattern
    "PLR2004", # magic value in comparison -- acceptable in small project
    "TRY300",  # try-except-return -- acceptable pattern
    "PTH123",  # open() vs Path.open() -- not worth changing
    "NPY002",  # numpy random -- legacy pattern in FL code
    "C901",    # too complex -- refactor later
    "PLR0913", # too many arguments -- CLI/API functions
    "PLW1510", # subprocess.run without check -- intentional
    "B904",    # raise without from -- fix incrementally
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"**/tests/**/*.py" = ["S101", "PLR2004", "ARG"]
"build/**/*.py" = ["SLF001"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shenas_plugins", "shenas_sources", "shenas_datasets", "shenas_dashboards", "shenas_themes", "shenas_frontends", "repository", "scheduler"]

[tool.ty.analysis]
# Optional dependencies that may not be installed in every environment.
# Using replace-imports-with-any so ty treats them as Any when absent
# rather than erroring, while still type-checking them when present.
replace-imports-with-any = [
    "anthropic",
    "authlib.**",
    "flwr.**",
    "google.cloud.**",
    "itsdangerous",
    "llama_cpp",
    "opentelemetry.instrumentation.**",
    "psycopg.**",
    "shenas_models.**",
    "shenasctl.**",
    "torch.**",
]

[tool.commitizen]
version_provider = "uv"
