[project]
name = "shenas-app"
dynamic = ["version"]
description = "shenas local server and web UI"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.6",
  "dlt[duckdb]>=1.24.0",
  "duckdb>=1.2.0",
  "fastapi>=0.135.2",
  "httpx>=0.28.1",
  "keyring>=25.7.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-httpx>=0.46b0",
  "pyarrow>=23.0.1",
  "rich>=14.3.3",
  "typer>=0.24.1",
  "strawberry-graphql[fastapi]>=0.276.0",
  "uvicorn>=0.42.0",
  "watchfiles>=0.21.0",
  "shenas-plugin-core",
  "shenas-source-core",
  "shenas-dataset-core",
  "shenas-dashboard-core",
  "shenas-transformation-core",
  "shenas-theme-default",
  "shenas-frontend-default",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.3.0"]

[project.scripts]
shenas = "app.cli:app"

[project.entry-points."shenas.cli"]
model = "app.llm.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "desktop/v(?P<version>[^+]+)"
raw-options.root = ".."
raw-options.git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--match",
  "desktop/v*",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
dev-mode-dirs = [".."]
