[project]
name = "shenas-cli"
dynamic = ["version"]
description = "CLI for the shenas metrics platform"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.24.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
shenasctl = "cli.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "desktop/v(?P<version>[^+]+)"
raw-options.root = ".."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "desktop/v*"]

[tool.hatch.build.targets.wheel]
packages = ["."]
dev-mode-dirs = [".."]
