[project]
name = "shenas-cli"
dynamic = ["version"]
description = "Shenas CLI -- lightweight command-line client"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
shenasctl = "cli.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "cli/v(?P<version>[^+]+)"
raw-options.root = ".."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "cli/v*"]

[tool.hatch.build.targets.wheel]
packages = ["."]
dev-mode-dirs = [".."]
