[project]
name = "shenas-fl-client"
version = "0.1.0"
description = "Shenas federated learning client daemon"
requires-python = ">=3.11"
dependencies = [
    "flwr>=1.15",
    "httpx>=0.28.1",
    "numpy>=1.26",
    "torch>=2.0",
]

[project.scripts]
shenas-fl-client = "fl_client.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fl_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
