[project]
name = "shenas-scheduler"
dynamic = ["version"]
description = "Shenas background sync scheduler sidecar"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.24.1",
]

[project.scripts]
shenas-scheduler = "scheduler.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "scheduler/v(?P<version>[^+]+)"
raw-options.root = ".."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "scheduler/v*"]

[tool.hatch.build.targets.wheel]
packages = ["."]
dev-mode-dirs = [".."]
