[project]
name = "shenas-pipe-core"
dynamic = ["version"]
description = "Shared utilities for shenas pipes"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "keyring>=25.0.0",
    "pendulum>=3.0.0",
    "rich>=14.0.0",
    "shenas-schema-core",
    "typer>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
