[project]
name = "shenas-pipe-core"
dynamic = ["version"]
description = "Shared utilities for shenas pipes"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "opentelemetry-api>=1.25.0",
    "keyring>=25.0.0",
    "pendulum>=3.0.0",
    "rich>=14.0.0",
    "shenas-schema-core",
    "typer>=0.24.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "pipe-core/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pipe-core/v*"]

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
