[project]
name = "shenas-pipe-duolingo"
dynamic = ["version"]
description = "Duolingo dlt connector for shenas"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.24.0",
    "httpx>=0.28.0",
    "pendulum>=3.0.0",
    "shenas-pipe-core",
    "shenas-schema-outcomes",
    "shenas-schema-habits",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points."shenas.pipes"]
duolingo = "shenas_pipes.duolingo.cli:app"

[tool.hatch.version]
source = "vcs"
tag-pattern = "pipe-duolingo/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pipe-duolingo/v*"]

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
