[project]
name = "shenas-pipe-garmin"
dynamic = ["version"]
description = "Garmin Connect dlt connector for shenas"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.24.0",
    "garminconnect>=0.2.40",
    "pendulum>=3.0.0",
    "shenas-pipe-core",
    "shenas-schema-fitness-tracker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."shenas.pipes"]
garmin = "shenas_pipes.garmin.cli:app"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
