[project]
name = "shenas-pipe-gmail"
dynamic = ["version"]
description = "Gmail dlt connector for shenas"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "shenas-pipe-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."shenas.pipes"]
gmail = "shenas_pipes.gmail.cli:app"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
