[project]
name = "shenas-pipe-lunchmoney"
dynamic = ["version"]
description = "Lunch Money dlt connector for shenas"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.24.0",
    "lunchable>=1.4.0",
    "pendulum>=3.0.0",
    "shenas-schema-finance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."shenas.pipes"]
lunchmoney = "shenas_pipes.lunchmoney.cli:app"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
