[project]
name = "shenas-pipe-obsidian"
dynamic = ["version"]
description = "Obsidian daily notes dlt connector for shenas"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.24.0",
    "pyyaml>=6.0.0",
    "shenas-pipe-core",
    "shenas-schema-outcomes",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."shenas.pipes"]
obsidian = "shenas_pipes.obsidian.cli:app"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/shenas_pipes"]
