[project]
name = "shenas-schema-core"
dynamic = ["version"]
description = "Shared utilities for shenas canonical schemas"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["shenas_schemas"]
