[project]
name = "shenas-schema-finance"
dynamic = ["version"]
description = "Canonical finance metrics schema for shenas"
requires-python = ">=3.11"
dependencies = [
    "shenas-schema-core",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points."shenas.schemas"]
finance = "shenas_schemas.finance:SCHEMA"

[tool.hatch.version]
source = "vcs"
tag-pattern = "schema-finance/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "schema-finance/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_schemas"]
