[project]
name = "shenas-schema-fitness"
dynamic = ["version"]
description = "Canonical fitness metrics schema for shenas"
requires-python = ">=3.11"
dependencies = [
    "shenas-schema-core",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points."shenas.schemas"]
fitness = "shenas_schemas.fitness:SCHEMA"

[tool.hatch.version]
source = "vcs"
tag-pattern = "schema-fitness/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "schema-fitness/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_schemas"]
