[project]
name = "shenas-schema-habits"
dynamic = ["version"]
description = "Canonical daily habits schema for shenas"
requires-python = ">=3.11"
dependencies = [
    "shenas-schema-core",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points."shenas.schemas"]
habits = "shenas_schemas.habits:SCHEMA"

[tool.hatch.version]
source = "vcs"
tag-pattern = "schema-habits/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "schema-habits/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_schemas"]
