[project]
name = "shenas-fl-server"
version = "0.1.0"
description = "Shenas federated learning coordinator"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.15",
    "fastapi>=0.135.2",
    "numpy>=1.26",
    "uvicorn>=0.42.0",
]

[project.scripts]
shenas-fl = "fl_server.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fl_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
