[project]
name = "shenas-repository"
dynamic = ["version"]
description = "PEP 503 package repository server with Ed25519 signing"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
shenasrepoctl = "repository.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "repo-server/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "repo-server/v*"]

[tool.hatch.build.targets.wheel]
packages = ["repository"]
