[project]
name = "shenas-ui-default"
dynamic = ["version"]
description = "Default shenas UI shell -- app layout, navigation, and plugin host"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.entry-points."shenas.ui"]
default = "shenas_ui.default:UI"

[tool.hatch.version]
source = "vcs"
tag-pattern = "ui-default/v(?P<version>[^+]+)"
raw-options.root = "../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "ui-default/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_ui"]
