[package]
name = "shenas-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "shenas_mobile"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.4", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
